# vectorlink

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  upgrade.md
.github/workflows/: ci.yml
benches/: distance.rs
src/: batch.rs  comparator.rs  indexer.rs  lib.rs  main.rs  openai.rs  server.rs  vecmath.rs  vectors.rs
vectorlink/: Cargo.toml
vectorlink-embed/: Cargo.toml
vectorlink-embed/src/: lib.rs  openai.rs
vectorlink-store/: Cargo.toml
vectorlink-task/: Cargo.toml  README.md
vectorlink-task/src/: lib.rs
vectorlink/benches/: distance.rs
vectorlink/src/: batch.rs  comparator.rs  configuration.rs  domain.rs  indexer.rs  lib.rs  main.rs  openai.rs  search_server.rs  server.rs  store.rs  utils.rs  vecmath.rs  vectors.rs  yale_er.rs
