[package]
name = "terminusdb-semantic-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["io"]}
tokio-stream = "0.1"
futures = "0.3"
regex = "1.7.3"
lazy_static = "1.4"
bytes = "1.4"
clap = {version = "4.2", features=["derive"]}
hnsw = "0.11"