[package]
name = "terminusdb-semantic-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["stream"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-util = {version = "0.7", features = ["io"]}
tokio-stream = { version = "0.1", features= ["io-util"] }
futures = "0.3"
regex = "1.7.3"
lazy_static = "1.4"
bytes = "1.4"
clap = {version = "4.2", features=["derive"]}
hnsw = { git = "https://github.com/terminusdb-labs/terminusdb-hnsw", features=["serde1"] }
serde_json= "1.0"
serde = {version="1.0", features=["derive"]}
thiserror = "1.0"
space = "0.17"
simdeez = "1.0"
rand_pcg = { version = "0.3.1", features = ["serde1"] }
rand = "0.8"
lru = "0.10"
url = "2.3.1"
urlencoding = "2.1"
packed_simd = {version = "0.3.8", optional=true}
aligned_box = "0.2"
tiktoken-rs = "0.4"
itertools = "0.10"
chrono = "0.4.26"

[features]
simd = ["packed_simd"]

[dev-dependencies]
tempfile = "3.1"
